[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-message-hub"
version = "3.0.0"
description = "Production-grade thread-safe message bus for Python — robots, IoT, microservices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jason", email = "xiaom.liang@gmail.com" }
]
keywords = [
    "message-bus", "pubsub", "threading", "queue",
    "robot", "iot", "microservices", "async"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.21"]
dev   = ["numpy>=1.21", "pytest>=7.0", "twine", "build"]

[project.urls]
Homepage   = "https://github.com/xiaomliang-code/x-message-hub"
Repository = "https://github.com/xiaomliang-code/x-message-hub"
Issues     = "https://github.com/xiaomliang-code/x-message-hub/issues"

[tool.setuptools.packages.find]
where = ["src"]